Fixed stylesheet and script paths

--- a/3d.html
+++ b/3d.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INXARTE PORTOFOLIO</title>
-    <link rel="stylesheet" href="/Styles/styles.css">
-    <script src="/Js files/3d.js" defer></script>
+    <link rel="stylesheet" href="Styles/styles.css">
+    <script src="Jsfiles/3d.js" defer></script>
 
 </head>
 <body>
