--- a/2d.html
+++ b/2d.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INXARTE PORTFOLIO</title>
-    <link rel="stylesheet" href="/Styles/styles.css">
-    <script src="/Js files/2d.js" defer></script>
+    <link rel="stylesheet" href="Styles/styles.css">
+    <script src="Jsfiles/2d.js" defer></script>
 </head>
 <body class="page-2d">
 
