--- a/films.html
+++ b/films.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INXARTE PORTOFOLIO</title>
-    <link rel="stylesheet" href="/Styles/styles.css">
-    <script src="/Js files/films.js" defer></script>
+    <link rel="stylesheet" href="Styles/styles.css">
+    <script src="Jsfiles/films.js" defer></script>
 
 </head>
 <body>
