--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INXARTE PORTOFOLIO</title>
-    <link rel="stylesheet" href="/Styles/styles.css">
-    <script src="/Js files/main.js" defer></script>
+    <link rel="stylesheet" href="Styles/styles.css">
+    <script src="Jsfiles/main.js" defer></script>
 </head>
 <body>
     <div class="main-grid">
