Fixed stylesheet and script paths v2

--- a/2d.html
+++ b/2d.html
@@ -30,7 +30,7 @@
         </div>
         <div class="buttons-right">
             <div class="arrow right page-2d">
-                <a href="/index.html">
+                <a href="index.html">
                     →<span class="arrow-text">MainPage</span>
                 </a>
             </div>
