--- a/3d.html
+++ b/3d.html
@@ -25,7 +25,7 @@
             </div>
             <div class="buttons-right">
                 <div class="arrow down page-3d">
-                    <a href="/index.html">
+                    <a href="index.html">
                         ↓<span class="arrow-text">MainPage</span>
                     </a>
                 </div>
