--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="buttons-row">
                 <div class="buttons-left">
                     <div class="download-cv-container">
-                        <a href="path/to/your/cv.pdf" download class="download-cv-button">
+                        <a href="Files/CV_INES_GAMBOA_ESTEVES_ENGLISH_2024.pdf" download class="download-cv-button">
                             CV
                             <span class="hover-text">Download CV</span>
                         </a>
@@ -42,19 +42,19 @@
                 </div>
                 <div class="buttons-right">
                     <div class="arrow left">
-                        <a href="/2d.html">
+                        <a href="2d.html">
                             ←
                             <span class="arrow-text">2D</span>
                         </a>
                     </div>
                     <div class="arrow up">
-                        <a href="/3d.html">
+                        <a href="3d.html">
                             ↑
                             <span class="arrow-text">3D</span>
                         </a>
                     </div>
                     <div class="arrow right">
-                        <a href="/films.html">
+                        <a href="films.html">
                             →
                             <span class="arrow-text">Films</span>
                         </a>
