--- a/films.html
+++ b/films.html
@@ -23,7 +23,7 @@
         </div>
         <div class="buttons-right">
             <div class="arrow left page-films">
-                <a href="/index.html">
+                <a href="index.html">
                     ←<span class="arrow-text">MainPage</span>
                 </a>
             </div>
